--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti62:3.3": "la prima conoscenza arriva attraverso la distruzione, ",
   "iti62:3.4": "seguita immediatamente dall’illuminazione ",
   "iti62:4.1": "e dalla libertà dell’illuminazione. ",
-  "iti62:4.2": "grazie a questo tipo di sapere ",
+  "iti62:4.2": "Grazie a questo tipo di conoscenza ",
   "iti62:4.3": "dell’inalterabilità della liberazione ",
   "iti62:4.4": "tramite la distruzione di ogni catena dell’esistenza. ",
   "iti62:5.1": "Perfezionate le sue abilità, ",
