--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti62:2.1": "Cercatori, ci sono queste tre abilità. ",
-  "iti62:2.3": "L’abilità di sapere che si sta per raggiungere l’illuminazione, l’abilità dell’illuminazione, l’abilità di uno che è illuminato. ",
+  "iti62:2.3": "L’abilità di sapere che si sta per raggiungere l’illuminazione, l’abilità dell’illuminazione e l’abilità di uno che è illuminato. ",
   "iti62:3.1": "Al praticante che si addestra ",
   "iti62:3.2": "seguendo la retta strada, ",
   "iti62:3.3": "la prima conoscenza arriva attraverso la distruzione, ",
