--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti62:3.4": "seguita immediatamente dall’illuminazione ",
   "iti62:4.1": "e dalla libertà dell’illuminazione. ",
   "iti62:4.2": "Allora c’è questo tipo di conoscenza: ",
-  "iti62:4.3": "dell’inalterabilità della liberazione ",
+  "iti62:4.3": "la mia liberazione è inalterabile ",
   "iti62:4.4": "tramite la distruzione di ogni catena dell’esistenza. ",
   "iti62:5.1": "Perfezionate le sue abilità, ",
   "iti62:5.2": "il saggio, devoto allo stato di pace ",
