Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti62:4.1": "e dalla libertà dell’illuminazione. ",
   "iti62:4.2": "Allora c’è questo tipo di conoscenza che ",
   "iti62:4.3": "la propria liberazione è inalterabile ",
-  "iti62:4.4": "grazie alla distruzione di ogni catena dell’esistenza. ",
+  "iti62:4.4": "con la distruzione di ogni catena dell’esistenza. ",
   "iti62:5.1": "Perfezionate le sue abilità, ",
   "iti62:5.2": "il saggio, devoto allo stato di pace ",
   "iti62:5.3": "indossa il suo ultimo corpo, ",
