Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti63:3.2": "consolidate nell’insegnamento, /// consolidate in ciò che è espresso/ ",
   "iti63:3.3": "ma non comprendono l’insegnamento, // non comprendono ciò che è espresso ",
   "iti63:3.4": "finiscono sotto il giogo della morte. ",
-  "iti63:4.1": "Quando uno comprende completamente l’insegnamento, ",
+  "iti63:4.1": "Quando uno comprende l’insegnamento, ",
   "iti63:4.2": "non si presume un insegnante, ",
   "iti63:4.3": "ma toccata l'emancipazione della mente, ",
   "iti63:4.4": "lo stadio della pace più alto, ",
