--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti63:2.1": "Cercatori, ci sono tre tempi ",
   "iti63:2.3": "Il tempo passato, il tempo futuro, il tempo presente. ",
-  "iti63:3.1": "Le creature che percepiscono gli insegnamenti, ",
+  "iti63:3.1": "Le creature che sono consce degli insegnamenti, ",
   "iti63:3.2": "consolidate nell’insegnamento, /// consolidate in ciò che è espresso/ ",
   "iti63:3.3": "ma non comprendono l’insegnamento, // non comprendono ciò che è espresso ",
   "iti63:3.4": "finiscono sotto il giogo della morte. ",
