--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti62:2.3": "L’abilità di sapere che si sta per raggiungere l’illuminazione, l’abilità dell’illuminazione e l’abilità di uno che è illuminato. ",
   "iti62:3.1": "Al praticante che si addestra ",
   "iti62:3.2": "seguendo la retta strada, ",
-  "iti62:3.3": "la prima conoscenza è nella distruzione [degli āsava], ",
+  "iti62:3.3": "la prima conoscenza è nella distruzione, ",
   "iti62:3.4": "poi dall’illuminazione ",
   "iti62:4.1": "e dalla libertà dell’illuminazione. ",
   "iti62:4.2": "Allora c’è questo tipo di conoscenza che ",
