--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti62:3.3": "la prima conoscenza è nella distruzione, ",
   "iti62:3.4": "poi dall’illuminazione ",
   "iti62:4.1": "e dalla libertà dell’illuminazione. ",
-  "iti62:4.2": "Allora c’è questo tipo di conoscenza che ",
+  "iti62:4.2": "Poi c’è questo tipo di conoscenza che ",
   "iti62:4.3": "‘la mia liberazione è inalterabile (incrollabile).’ ",
   "iti62:4.4": "con la distruzione di ogni catena dell’esistenza. ",
   "iti62:5.1": "Perfezionate le sue abilità, ",
