Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga6/iti51_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga6/iti51_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti51_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti51:4.1": "Avendo toccato di persona quello stato libero dalla morte ",
   "iti51:4.2": "senza base per la rinascita (senza acquisizione),** ",
   "iti51:4.3": "la persona senza compulsioni realizza ",
-  "iti51:4.4": "il lasciare andare di qualsiasi base (acquisizione). ",
+  "iti51:4.4": "il lasciare andare di qualsiasi base per la rinascita (acquisizione). ",
   "iti51:4.5": "il Buddha perfettamente risvegliato insegna ",
   "iti51:4.6": "quel posto (sentiero ?luogo? stato? CHECK OTHER) senza tristezza e senza macchia. "
 }
