Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga6/iti52_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga6/iti52_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti52_translation-it-soma.json
@@ -9,5 +9,5 @@
   "iti52:4.1": "dove queste finiscono ",
   "iti52:4.2": "e il sentiero che conduce alla loro distruzione. ",
   "iti52:4.3": "Con la distruzione delle sensazioni, il cercatore ",
-  "iti52:4.4": "si è saziato, ha spento il fuoco. (senza più desiderio, ha raggiunto il Nibbāna) (è sazio, completamente estinto.)(senza più appetito, ha spento il fuoco.)  (ha saziato/sedato la fame e ha estinto il fuoco)  (è appagato e ha cessato di ardere.) (si è dissetato, è giunto al refrigerio). "
+  "iti52:4.4": "senza più desiderio, si è saziato, è giunto al refrigerio (ha raggiunto il Nibbāna) "
 }
