--- a/translation/it/soma/sutta/kn/iti/vagga6/iti52_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti52_translation-it-soma.json
@@ -9,5 +9,5 @@
   "iti52:4.1": "dove queste finiscono ",
   "iti52:4.2": "e il sentiero che conduce alla loro distruzione. ",
   "iti52:4.3": "Con la distruzione delle sensazioni, il cercatore ",
-  "iti52:4.4": "senza più desiderio, si è saziato, è giunto al refrigerio (ha raggiunto il Nibbāna) "
+  "iti52:4.4": "senza più desiderio, si è saziato, è giunto al refrigerio (ha raggiunto il Nibbāna). "
 }
