--- a/translation/it/soma/sutta/kn/iti/vagga6/iti53_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti53_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti53:2.1": "“Cercatori, ci sono queste tre sensazioni. ",
   "iti53:2.2": "Quali tre? ",
-  "iti53:2.3": "Una sensazione piacevole, una sensazione spiacevole e una sensazione neutra. ",
+  "iti53:2.3": "Una sensazione piacevole, una sensazione dolorosa e una sensazione neutra. ",
   "iti53:2.4": "Una sensazione piacevole dovrebbe essere vista come spiacevole. ",
   "iti53:2.5": "Una sensazione spiacevole dovrebbe essere vista come una coltellata. ",
   "iti53:2.6": "Una sensazione neutra come impermanente. ",
