--- a/translation/it/soma/sutta/kn/iti/vagga6/iti53_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti53_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti53:2.2": "Quali tre? ",
   "iti53:2.3": "Una sensazione piacevole, una sensazione dolorosa e una sensazione neutra. ",
   "iti53:2.4": "Una sensazione piacevole dovrebbe essere vista come dolorosa. ",
-  "iti53:2.5": "Una sensazione spiacevole dovrebbe essere vista come una coltellata. ",
+  "iti53:2.5": "Una sensazione dolorosa dovrebbe essere vista come una coltellata. ",
   "iti53:2.6": "Una sensazione neutra come impermanente. ",
   "iti53:2.7": "Chiunque veda in questo modo... ",
   "iti53:2.8": "quello è chiamato ‘un cercatore nobile, che vede correttamente, che ha completamente reciso la sete, slegato le catene, che con la completa comprensione della presunzione (māna) ha portato a termine il dukkha. ",
