--- a/translation/it/soma/sutta/kn/iti/vagga6/iti53_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti53_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti53:2.6": "Una sensazione neutra dovrebbe essere vista come impermanente. ",
   "iti53:2.7": "Chiunque veda in questo modo... ",
   "iti53:2.8": "quello è chiamato ‘un cercatore nobile, che vede correttamente, che ha completamente reciso la sete, slegato le catene, che con la completa comprensione della presunzione (māna) ha portato a termine il dukkha. ",
-  "iti53:3.1": "Il cercatore che vede il piacevole come spiacevole, ",
+  "iti53:3.1": "Il cercatore che vede il piacevole come doloroso, ",
   "iti53:3.2": "lo spiacevole come una coltellata ",
   "iti53:3.3": "e quel placido neutro ",
   "iti53:3.4": "come impermanente, ",
