--- a/translation/it/soma/sutta/kn/iti/vagga6/iti54_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti54_translation-it-soma.json
@@ -8,6 +8,6 @@
   "iti54:3.4": "l’origine delle ricerche, ",
   "iti54:4.1": "... ",
   "iti54:4.2": ".. ",
-  "iti54:4.3": "Con la distruzione delle ricerche, il cercatore ",
+  "iti54:4.3": "Con l’eliminazione delle ricerche, il cercatore ",
   "iti54:4.4": "... "
 }
