--- a/translation/it/soma/sutta/kn/iti/vagga6/iti55_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti55_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti55:4.1": "Per chi è imperturbabile da qualsiasi passione, ",
   "iti55:4.2": "per chi è libero grazie alla distruzione della sete, ",
   "iti55:4.3": "le ricerche sono state abbandonate, ",
-  "iti55:4.4": "così come sono state sradicate le posizioni e i punti di vista. ",
+  "iti55:4.4": "così come sono state sradicate i punti di vista. ",
   "iti55:4.5": "Con l’eliminazione della ricerca, quel cercatore è ",
   "iti55:4.6": "senza desideri e senza dubbi. "
 }
