--- a/translation/it/soma/sutta/kn/iti/vagga6/iti55_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti55_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti55:3.1": "Con la ricerca dei piaceri sensuali, la ricerca per l’esistenza (di esistere, di vivere), ",
   "iti55:3.2": "la ricerca per una vita religiosa, ",
   "iti55:3.3": "uno si aggrappa a qualcosa come fosse la verità, ",
-  "iti55:3.4": "con una sfilza di posizioni e punti di vista. ",
+  "iti55:3.4": "con una sfilza di punti di vista. ",
   "iti55:4.1": "Per chi è imperturbabile da qualsiasi passione, ",
   "iti55:4.2": "per chi è libero grazie alla distruzione della sete, ",
   "iti55:4.3": "le ricerche sono state abbandonate, ",
