--- a/translation/it/soma/sutta/kn/iti/vagga6/iti55_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti55_translation-it-soma.json
@@ -11,5 +11,5 @@
   "iti55:4.3": "le ricerche sono state abbandonate, ",
   "iti55:4.4": "così come sono state sradicate i punti di vista. ",
   "iti55:4.5": "Con l’eliminazione delle ricerche, ",
-  "iti55:4.6": "quel cercatore è senza speranza e senza dubbi. "
+  "iti55:4.6": "quel cercatore è senza aspirazione e senza dubbi. "
 }
