--- a/translation/it/soma/sutta/kn/iti/vagga6/iti55_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti55_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti55:3.2": "la ricerca per una vita religiosa, ",
   "iti55:3.3": "uno si aggrappa a qualcosa come fosse la verità, ",
   "iti55:3.4": "con una sfilza di punti di vista. ",
-  "iti55:4.1": "Per chi è imperturbabile da qualsiasi passione, ",
+  "iti55:4.1": "Per chi è privo di qualsiasi passione, ",
   "iti55:4.2": "per chi è libero grazie alla distruzione della sete, ",
   "iti55:4.3": "le ricerche sono state abbandonate, ",
   "iti55:4.4": "così come sono state sradicate i punti di vista. ",
