Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti62:3.1": "Al praticante che si addestra ",
   "iti62:3.2": "seguendo la retta strada, ",
   "iti62:3.3": "la prima conoscenza è nella eliminazione, ",
-  "iti62:3.4": "poi dall’illuminazione ",
+  "iti62:3.4": "a cui segue l’illuminazione. ",
   "iti62:4.1": "e dalla libertà dell’illuminazione. ",
   "iti62:4.2": "Poi c’è questo tipo di conoscenza che ",
   "iti62:4.3": "‘la mia liberazione è inalterabile (incrollabile).’ ",
