Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti62:3.2": "seguendo la retta strada, ",
   "iti62:3.3": "la prima conoscenza è nella eliminazione, ",
   "iti62:3.4": "a cui segue l’illuminazione. ",
-  "iti62:4.1": "Dalla libertà che sorge dall’illuminazione ",
+  "iti62:4.1": "Dalla libertà che sorge con l’illuminazione, ",
   "iti62:4.2": "arriva questo tipo di conoscenza a tale persona: ",
   "iti62:4.3": "‘la mia liberazione è inalterabile (incrollabile).’ ",
   "iti62:4.4": "con la distruzione di ogni catena dell’esistenza. ",
