--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti62:4.2": "a tale persona arriva questa conoscenza: ",
   "iti62:4.3": "‘la mia liberazione è inalterabile (incrollabile).’ ",
   "iti62:4.4": "Con l’eliminazione di ogni catena dell’esistenza, ",
-  "iti62:5.1": "Perfezionate le sue abilità, ",
+  "iti62:5.1": "perfezionate le sue abilità, ",
   "iti62:5.2": "il saggio devoto allo stato di pace/placidità ",
   "iti62:5.3": "indossa il suo ultimo corpo, ",
   "iti62:5.4": "dopo aver sconfitto Māra e il suo esercito.” "
