Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti63:2.3": "Il tempo passato, il tempo futuro, il tempo presente. ",
   "iti63:3.1": "Le creature che sono consce dell’insegnamento, ",
   "iti63:3.2": "radicate nell’insegnamento, ",
-  "iti63:3.3": "ma che non comprendono l’insegnamento, ",
+  "iti63:3.3": "non comprendono l’insegnamento, ",
   "iti63:3.4": "finiscono sotto il giogo della morte. ",
   "iti63:4.1": "Quando uno comprende l’insegnamento, ",
   "iti63:4.2": "non si presume un insegnante, ",
