--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti63:3.1": "Le creature che sono consce dell’insegnamento, ",
   "iti63:3.2": "radicate nell’insegnamento, ",
   "iti63:3.3": "non comprendono l’insegnamento ",
-  "iti63:3.4": "finiscono sotto il giogo della morte. ",
+  "iti63:3.4": "e finiscono sotto il giogo della morte. ",
   "iti63:4.1": "Quando uno comprende l’insegnamento, ",
   "iti63:4.2": "non si presume un insegnante, ",
   "iti63:4.3": "ma toccata l'emancipazione della mente, ",
