--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -12,5 +12,5 @@
   "iti63:5.1": "è uno che ha perfezionato l’insegnamento. ",
   "iti63:5.2": "Il saggio devoto allo stato di pace più alto, ",
   "iti63:5.3": "un praticante fermamente stabilito nel Dhamma comprendendo ",
-  "iti63:5.4": "è uno che ha perfetta conoscenza, e non si avvicina al concettualizzare. "
+  "iti63:5.4": "è uno che ha perfetta conoscenza, e non può essere classificato. (è un fuoriclasse) "
 }
