Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti63:2.1": "Cercatori, ci sono tre tempi ",
   "iti63:2.3": "Il tempo passato, il tempo futuro, il tempo presente. ",
-  "iti63:3.1": "Le creature che sono coscienti dell’insegnamento, ",
+  "iti63:3.1": "Le creature che sono coscienti di ciò che viene detto, // Le creature che sono coscienti dell’insegnamento, ",
   "iti63:3.2": "radicate nell’insegnamento, ",
   "iti63:3.3": "non comprendono l’insegnamento ",
   "iti63:3.4": "e finiscono sotto il giogo della morte. ",
