Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti63:3.3": "e non comprendendo ciò che viene detto, ",
   "iti63:3.4": "finiscono sotto il giogo della morte. ",
   "iti63:4.1": "Quando uno comprende ciò che viene detto, ",
-  "iti63:4.2": "non si presume un insegnante, ",
+  "iti63:4.2": "non presume che ci sia un oratore, ",
   "iti63:4.3": "ma toccata l'emancipazione della mente, ",
   "iti63:4.4": "lo stadio della pace più alto, ",
   "iti63:5.1": "è uno che ha perfezionato l’insegnamento. ",
