--- a/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
@@ -1,5 +1,6 @@
 {
   "iti67:2.1": "Cercatori, ci sono queste tre tipi di sagacia. ",
+  "iti67:2.2": "Quali tre? ",
   "iti67:2.3": "La sagacia corporale*... ",
   "iti67:3.1": "La sagacia corporale*...xxx ",
   "iti67:3.2": "e sagacia della mente/mentale* senza influenze xx?? ",
