Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti67:2.1": "Cercatori, ci sono questi tre tipi di sagacia. ",
   "iti67:2.2": "Quali tre? ",
-  "iti67:2.3": "La sagacia del corpo, della parola, della mente. ",
+  "iti67:2.3": "La sagacia del corpo, della parola e della mente. ",
   "iti67:3.1": "La sagacia corporale*...xxx ",
   "iti67:3.2": "e sagacia della mente/mentale* senza influenze xx?? ",
   "iti67:3.3": "Colui che ha lavato via ogni male, ",
