--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.76_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn1.76:0.3": "Nicht altern ",
   "sn1.76:1.1": "„Was altert und was altert nicht? ",
   "sn1.76:1.2": "Was wird ein Abweg genannt? ",
-  "sn1.76:1.3": "Was ist für taugliche Eigenschaften eine Hürde? ",
+  "sn1.76:1.3": "Was ist eine Absperrung für taugliche Eigenschaften? ",
   "sn1.76:1.4": "Was löst sich auf bei Tag und bei Nacht? ",
   "sn1.76:1.5": "Was ist der Fleck bei der Keuschheit? ",
   "sn1.76:1.6": "Was ist das wasserlose Bad? ",
