--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.76_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "sn1.76:3.1": "„Die körperliche Form der Sterblichen altert, ",
   "sn1.76:3.2": "ihr Name und Stamm aber altern nicht. ",
   "sn1.76:3.3": "Wollust wird ein Abweg genannt, ",
-  "sn1.76:4.1": "und Gier ist für taugliche Eigenschaften eine Hürde. ",
+  "sn1.76:4.1": "und Gier ist eine Absperrung für taugliche Eigenschaften. ",
   "sn1.76:4.2": "Die Jugend löst sich auf bei Tag und bei Nacht. ",
   "sn1.76:4.3": "Frauen sind der Fleck bei der Keuschheit, ",
   "sn1.76:4.4": "an sie klammert sich diese Generation. ",
