--- a/translation/it/soma/sutta/an/an6/an6.13_translation-it-soma.json
+++ b/translation/it/soma/sutta/an/an6/an6.13_translation-it-soma.json
@@ -1,4 +1,5 @@
 {
   "an6.13:1.1": "“Cercatori, ci sono questi sei stati relativi alla via d’uscita. ",
-  "an6.13:1.2": "Quali sei? "
+  "an6.13:1.2": "Quali sei? ",
+  "an6.13:1.3": "È quando [in questo caso /// qui]] un cercatore direbbe questo: "
 }
