Translations by ayyasoma to translation/it/soma/sutta/an/an6/an6.13_translation-it-soma.json

--- a/translation/it/soma/sutta/an/an6/an6.13_translation-it-soma.json
+++ b/translation/it/soma/sutta/an/an6/an6.13_translation-it-soma.json
@@ -2,6 +2,6 @@
   "an6.13:1.1": "“Cercatori, ci sono questi sei stati relativi alla via d’uscita. ",
   "an6.13:1.2": "Quali sei? ",
   "an6.13:1.3": "Se un cercatore dicesse: ",
-  "an6.13:1.4": "‘Ho coltivato la liberazione del cuore attraverso l’amore. L’ho sviluppata, padroneggiata, stabilizzata, praticata, nutrita e intrapresa in maniera risoluta. ",
+  "an6.13:1.4": "‘Ho coltivato la liberazione del cuore attraverso l’amore. L’ho sviluppata, padroneggiata, stabilizzata, praticata, nutrita e intrapresa in maniera risoluta.  / alimentata, veicolata ",
   "an6.13:1.5": "Avversione / alimentata, "
 }
