--- a/translation/it/soma/sutta/an/an6/an6.13_translation-it-soma.json
+++ b/translation/it/soma/sutta/an/an6/an6.13_translation-it-soma.json
@@ -3,5 +3,5 @@
   "an6.13:1.2": "Quali sei? ",
   "an6.13:1.3": "Se un cercatore dicesse: ",
   "an6.13:1.4": "‘Ho coltivato la liberazione del cuore attraverso l’amore. L’ho perseguita, veicolata, consolidata, praticata, nutrita e ben intrapresa. ",
-  "an6.13:1.5": "Tuttavia, l’avversione rimane ad ossessionare la mia mente. "
+  "an6.13:1.5": "Tuttavia, l’avversione rimane ad ossessionare la mia mente.’ "
 }
