--- a/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti66:2.1": "Cercatori, ci sono questi tre riti purificatori. ",
   "iti66:2.3": "x ",
   "iti66:3.1": "Purità del corpo/corporale*, della parola/verbale* ",
-  "iti66:3.2": "e purità della mente/mentale* senza influenze. ",
+  "iti66:3.2": "e purità della mente/mentale* senza compulsioni. ",
   "iti66:3.3": "Colui che si è sbarazzato di tutto ",
   "iti66:3.4": "quello è chiamato uno che ha perfezionato i riti purificatori e la purezza. "
 }
