--- a/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti66:2.1": "Cercatori, ci sono questi tre riti purificatori. ",
+  "iti66:2.1": "Cercatori, ci sono questi tre tipi di purezza. ",
   "iti66:2.3": "x ",
   "iti66:3.1": "Purità del corpo/corporale*, della parola/verbale* ",
   "iti66:3.2": "e purità della mente/mentale* senza compulsioni. ",
