--- a/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti66:2.1": "Cercatori, ci sono questi tre tipi di purezza. ",
   "iti66:2.2": "Quali tre? ",
-  "iti66:2.3": "x ",
+  "iti66:2.3": "Purezza corporale, verbale e mentale. ",
   "iti66:3.1": "Purità del corpo/corporale*, della parola/verbale* ",
   "iti66:3.2": "e purità della mente/mentale* senza compulsioni. ",
   "iti66:3.3": "Colui che si è sbarazzato di tutto ",
