--- a/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
@@ -4,6 +4,6 @@
   "iti66:2.3": "Purezza corporale, verbale e mentale. ",
   "iti66:3.1": "Purità del corporale*, verbale* ",
   "iti66:3.2": "e mentale* senza compulsioni. ",
-  "iti66:3.3": "Colui che si è sbarazzato di tutto ",
+  "iti66:3.3": "Colui che ha abbandonato tutto ",
   "iti66:3.4": "quello è chiamato uno che ha perfezionato i riti purificatori e la purezza. "
 }
