Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
@@ -5,5 +5,5 @@
   "iti66:3.1": "Purità del corporale*, verbale* ",
   "iti66:3.2": "e mentale* senza compulsioni. ",
   "iti66:3.3": "Colui che ha abbandonato tutto ",
-  "iti66:3.4": "quello è chiamato puro, dotato di purezza. "
+  "iti66:3.4": "quello è chiamato uno che ha abbandonato tutto. "
 }
