--- a/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti66_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti66:2.1": "Cercatori, ci sono questi tre tipi di purezza. ",
   "iti66:2.2": "Quali tre? ",
   "iti66:2.3": "Purezza corporale, verbale e mentale. ",
-  "iti66:3.1": "Purità del corporale*, verbale* ",
+  "iti66:3.1": "Purità corporale*, verbale* ",
   "iti66:3.2": "e mentale* senza compulsioni. ",
   "iti66:3.3": "Colui che è puro, dotato di purezza, ",
   "iti66:3.4": "quello è chiamato uno che ha abbandonato tutto. "
