--- a/translation/it/soma/sutta/kn/iti/vagga7/iti64_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti64_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti64:2.1": "Cercatori, ci sono queste tre cattive condotte. ",
   "iti64:2.2": "Quali tre? ",
-  "iti64:2.3": "Cattiva condotta con il corpo, le parole, e i pensieri. (corporale, verbale, mentale) ",
+  "iti64:2.3": "Cattiva condotta corporale, verbale e mentale. ",
   "iti64:3.1": "x ",
   "iti64:3.2": "x ",
   "iti64:3.3": "x ",
