--- a/translation/it/soma/sutta/kn/iti/vagga7/iti65_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti65_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti65:2.1": "Cercatori, ci sono questi tre tipi di buone condotte. ",
   "iti65:2.2": "Buona condotta corporale, verbale e mentale. ",
-  "iti65:2.3": " (corporali* etc) ",
+  "iti65:2.3": "Buona condotta corporale, verbale e mentale. ",
   "iti65:3.1": "[Quando uno smette di comportarsi male con il corpo (con azioni corporali) ] ",
   "iti65:3.2": "x ",
   "iti65:3.3": "x ",
