Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti67:2.2": "Quali tre? ",
   "iti67:2.3": "La sagacia del corpo, la sagacia della parola e la sagacia della mente. ",
   "iti67:3.1": "La sagacia corporale, la sagacia verbale ",
-  "iti67:3.2": "e sagacia della mente/mentale* senza influenze xx?? ",
+  "iti67:3.2": "e la sagacia mentale* senza compulsioni. ",
   "iti67:3.3": "Colui che ha lavato via ogni male, ",
   "iti67:3.4": "quello è chiamato una che ha perfezionato la sagacia e la sagacia? "
 }
