--- a/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti67:2.1": "Cercatori, ci sono questi tre tipi di sagacia. ",
   "iti67:2.2": "Quali tre? ",
   "iti67:2.3": "La sagacia del corpo, la sagacia della parola e la sagacia della mente. ",
-  "iti67:3.1": "Saggio con il corpo, Saggio con la parola ",
+  "iti67:3.1": "Saggio con il corpo, saggio con la parola ",
   "iti67:3.2": "e la sagacia mentale* senza compulsioni. ",
   "iti67:3.3": "Colui che ha lavato via ogni male, ",
   "iti67:3.4": "quello è chiamato una che ha perfezionato la sagacia e la sagacia? "
