Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
@@ -5,5 +5,5 @@
   "iti67:3.1": "Saggio con il corpo, saggio con la parola ",
   "iti67:3.2": "e la sagacia mentale* senza compulsioni. ",
   "iti67:3.3": "Il saggio dotato di sagacia ",
-  "iti67:3.4": "quello è chiamato una che ha perfezionato la sagacia e la sagacia? "
+  "iti67:3.4": "quello è chiamato uno che ha lavato via ogni male. "
 }
