--- a/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti67:2.2": "Quali tre? ",
   "iti67:2.3": "La sagacia del corpo, la sagacia della parola e la sagacia della mente. ",
   "iti67:3.1": "Saggio con il corpo, saggio con la parola ",
-  "iti67:3.2": "e la sagacia mentale* senza compulsioni. ",
+  "iti67:3.2": "e saggio con la mente senza compulsioni. ",
   "iti67:3.3": "Il saggio dotato di sagacia ",
   "iti67:3.4": "quello è chiamato uno che ha lavato via ogni male. "
 }
