--- a/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti67:2.1": "Cercatori, ci sono questi tre tipi di sapienza. ",
   "iti67:2.2": "Quali tre? ",
-  "iti67:2.3": "La sagacia del corpo, la sagacia della parola e la sagacia della mente. ",
+  "iti67:2.3": "La sapienza del corpo, la sapienza della parola e la sapienza della mente. ",
   "iti67:3.1": "Saggio con il corpo, saggio con la parola ",
   "iti67:3.2": "e saggio con la mente, senza compulsioni. ",
   "iti67:3.3": "Il saggio dotato di sagacia ",
