--- a/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti67_translation-it-soma.json
@@ -4,6 +4,6 @@
   "iti67:2.3": "La sapienza del corpo, la sapienza della parola e la sapienza della mente. ",
   "iti67:3.1": "Sapiente con il corpo, sapiente con la parola ",
   "iti67:3.2": "e sapiente con la mente, senza compulsioni. ",
-  "iti67:3.3": "Il saggio dotato di sagacia ",
+  "iti67:3.3": "Il sapiente dotato di sagacia ",
   "iti67:3.4": "quello è chiamato uno che ha lavato via ogni male. "
 }
