--- a/translation/it/soma/sutta/kn/iti/vagga7/iti68_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti68_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti68:2.1": "“Cercatori, chi non ha ancora abbandonato passione, odio, e illusione, ",
+  "iti68:2.1": "“Cercatori, vi dico che chi non ha ancora abbandonato passione, odio, e illusione, ",
   "iti68:2.2": "è imprigionato da Māra, è appeso al cappio della morte, è alla mercé del maligno. ",
   "iti68:2.3": "??? Mentre per chi le ha rimosse, io dico: ",
   "iti68:2.4": "?? ",
