Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti68_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti68_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti68_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti68:2.4": "non è più imprigionato da Māra, ha slacciato il cappio della morte, non è più alla mercé del maligno. ",
   "iti68:3.1": "Chi ha dissipato passione, odio ",
   "iti68:3.2": "e ignoranza, ",
-  "iti68:3.3": "che ha coltivato questo tipo di sapere, ",
+  "iti68:3.3": "è uno che è andato oltre, è illuminato, si è evoluto. ",
   "iti68:3.4": "è detto uno che è diventato divino, un Tathāgata, ",
   "iti68:3.5": "un Buddha, uno che è andato oltre l’ostilità e la paura, ",
   "iti68:3.6": "e che ha abbandonato tutto. "
