--- a/translation/it/soma/sutta/sn/sn56/sn56.11_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn56/sn56.11_translation-it-soma.json
@@ -13,5 +13,5 @@
   "sn56.11:4.6": "Questa è la verità dei nobili sulla cessazione del sofferenza ",
   "sn56.11:4.7": "la completa disaffezione e cessazione, il lasciare andare, l’abbandono, la liberazione e il non attaccamento a quella stessa sete. ",
   "sn56.11:4.8": "questa è la verità dei nobili sul cammino/percorso che conduce alla fine del sofferenza ",
-  "sn56.11:5.1": "‘Questa è la verità dei nobili sul dukkha’ sorse in me, mai sentito prima "
+  "sn56.11:5.1": "‘Questa è la verità dei nobili sulla sofferenza’ sorse in me, mai sentito prima "
 }
