Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga4/iti35_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga4/iti35_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga4/iti35_translation-it-soma.json
@@ -9,6 +9,6 @@
   "iti35:4.2": "e dai grandi rishi: ",
   "iti35:4.3": "chi percorre questo sentiero, ",
   "iti35:4.4": "come indicato dal Buddha, ",
-  "iti35:4.5": "porterà il sofferenza a termine ",
+  "iti35:4.5": "porterà la sofferenza a termine ",
   "iti35:4.6": "seguendo gli insegnamenti del Maestro.” "
 }
