--- a/translation/it/soma/sutta/kn/iti/vagga1/iti8_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti8_translation-it-soma.json
@@ -7,5 +7,5 @@
   "iti8:4.1": "Chi annienta la presunzione, ",
   "iti8:4.2": "liberandosi con l’eradicazione della presunzione, ",
   "iti8:4.3": "e debellando il groviglio della presunzione ",
-  "iti8:4.4": "trascende tutto il dukkha. "
+  "iti8:4.4": "trascende tutto il sofferenza. "
 }
