--- a/translation/it/soma/sutta/kn/iti/vagga4/iti37_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga4/iti37_translation-it-soma.json
@@ -9,5 +9,5 @@
   "iti37:4.1": "Uno che vive così, ardente, ",
   "iti37:4.2": "in pace, non agitato, ",
   "iti37:4.3": "dedito alla tranquillità del cuore, ",
-  "iti37:4.4": "raggiunge la distruzione del dukkha.” [check Pāpune in other suttas / optative like raggiungerebbe] "
+  "iti37:4.4": "raggiunge la distruzione della sofferenza.” [check Pāpune in other suttas / optative like raggiungerebbe] "
 }
