Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga1/iti8_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga1/iti8_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti8_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti8:2.1": "“Cercatori, quando non si conosce e non si comprende la presunzione***, allora il cuore non si spassiona, non si può lasciare andare ed è impossibile la distruzione del dukkha. ",
+  "iti8:2.1": "“Cercatori, quando non si conosce e non si comprende la presunzione***, allora il cuore non si spassiona, non si può lasciare andare ed è impossibile la distruzione del sofferenza. ",
   "iti8:3.1": "Questa gente, posseduta dalla presunzione, ",
   "iti8:3.2": "aggrovigliata dalla presunzione, si delizia nell’esistenza. ",
   "iti8:3.3": "Poiché non comprende la presunzione, ",
