Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga1/iti7_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga1/iti7_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti7_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti7:1.1": "Così ho udito dal Buddha, dall’Arahant: ",
-  "iti7:2.1": "“Cercatori, quando non si conosce e non si comprende il tutto, allora il cuore non si spassiona, non si può lasciare andare ed è impossibile la distruzione del dukkha. ",
+  "iti7:2.1": "“Cercatori, quando non si conosce e non si comprende il tutto, allora il cuore non si spassiona, non si può lasciare andare ed è impossibile la distruzione della sofferenza. ",
   "iti7:3.1": "“Chi conosce il tutto come il tutto, ",
   "iti7:3.2": "non si appassiona più di nulla. (da nessuna parte) ",
   "iti7:3.3": "Chi comprende proprio tutto, ",
