Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti103:3.2": ".. ",
   "iti103:4.1": "Chiunque non conosca la sofferenza, ",
   "iti103:4.2": "l’origine della sofferenza, ",
-  "iti103:4.3": "quando il dukkha in ogni modo ",
+  "iti103:4.3": "quando la sofferenza in ogni modo ",
   "iti103:4.4": "è completamente terminato, ",
   "iti103:4.5": "e non conoscono quel percorso ",
   "iti103:4.6": "che conduce alla pacificazione della sofferenza,** ",
