--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti103:5.3": "sono incapaci di giungere alla fine, ",
   "iti103:5.4": "e sono destinati verso la nascita e vecchiaia. ",
   "iti103:6.1": "Quelli che conoscono la sofferenza ",
-  "iti103:6.2": "l’origine del dukkha, ",
+  "iti103:6.2": "l’origine della sofferenza, ",
   "iti103:6.3": "quando la sofferenza in ogni modo * ",
   "iti103:6.4": "è completamente terminato, ",
   "iti103:6.5": "e conoscono quel percorso * ",
