Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
@@ -31,5 +31,5 @@
   "iti89:9.1": "Dovrebbe trovarsi un amico di questo tipo ",
   "iti89:9.2": "il saggio, e andargli dietro passo passo. ",
   "iti89:9.3": "Il cercatore che segue la via, ",
-  "iti89:9.4": "raggiunge la distruzione del dukkha.” "
+  "iti89:9.4": "raggiunge la distruzione del sofferenza.” "
 }
