--- a/translation/it/soma/sutta/sn/sn36/sn36.2_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn36/sn36.2_translation-it-soma.json
@@ -6,7 +6,7 @@
   "sn36.2:2.2": "o né piacevole né spiacevole, ",
   "sn36.2:2.3": "sia internamente che esternamente, ",
   "sn36.2:2.4": "qualsiasi sensazione ci sia: ",
-  "sn36.2:3.1": "avendola conosciuta come ‘questo è dukkha,’ ",
+  "sn36.2:3.1": "avendola conosciuta come ‘questo è sofferenza,’ ",
   "sn36.2:3.2": "vedendo come è ingannevole, come cade in pezzi, ",
   "sn36.2:3.3": "come passo passo si disintegra, [ come a ogni tocco si disintegra ] ",
   "sn36.2:3.4": "così si perde la passione per esse. ",
