Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga5/iti39_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga5/iti39_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga5/iti39_translation-it-soma.json
@@ -14,6 +14,6 @@
   "iti39:4.1": "il vedere il male ",
   "iti39:4.2": "e lo spassionarsi da esso. ",
   "iti39:4.3": "Così, con il cuore libero dalla passione, ",
-  "iti39:4.4": "portate il dukkha a termine.” ",
+  "iti39:4.4": "portate la sofferenza a termine.” ",
   "iti39:5.1": "Anche questo disse il Buddha. Così ho udito. "
 }
