Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti62:2.3": "L’abilità di sapere che si sta per raggiungere l’illuminazione, l’abilità dell’illuminazione e l’abilità di uno che è illuminato. ",
   "iti62:3.1": "Al praticante che si addestra ",
   "iti62:3.2": "seguendo la retta strada, ",
-  "iti62:3.3": "la prima conoscenza riguarda ciò che si è eliminato, ",
+  "iti62:3.3": "la prima conoscenza riguarda ciò che si è eliminato ",
   "iti62:3.4": "seguita poi dall’illuminazione. ",
   "iti62:4.1": "Dalla libertà che sorge con l’illuminazione, ",
   "iti62:4.2": "a tale persona arriva questa conoscenza: ",
