Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti69:2.1": "“Cercatori, vi dico che chi non ha ancora abbandonato passione, odio, e illusione, ",
-  "iti69:2.2": "non ha attraversato l’oceano con le sue onde, correnti, mulinelli, pieno di mostri marini. ",
+  "iti69:2.2": "non ha ancora attraversato l’oceano con le sue onde, correnti, mulinelli, pieno di mostri marini. ",
   "iti69:2.3": "Mentre vi dico che chi le ha rimosse ",
   "iti69:2.4": "io dico: ‘quello è andato oltre l’oceano con le sue onde, creste, mulinelli, e mostri che ti afferrano, è andato oltre, raggiunto l’altra sponda, è in piedi su terra secca, è un Brahman.’” ",
   "iti69:3.1": "x ",
