Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti69:2.4": "ha attraversato l’oceano con le sue onde, correnti, mulinelli, mostri e demoni marini. È andato oltre, ha raggiunto l’altra sponda, è un brahmano in piedi sulla terra asciutta.” ",
   "iti69:3.1": "Chi ha dissipato passione, odio ",
   "iti69:3.2": "e ignoranza, ",
-  "iti69:3.3": "è riuscito ad attraversare questo oceano, con i mostri e demoni marini, ",
+  "iti69:3.3": "è riuscito ad attraversare questo oceano, con mostri e demoni marini, ",
   "iti69:3.4": "il pericolo delle onde, difficile da superare. ",
   "iti69:4.1": "Ha superato gli attaccamenti, abbandonato la morte, è senza acquisizioni, ",
   "iti69:4.2": "ha abbandonato la sofferenza che conduce a nuove esistenze. ",
