Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -127,7 +127,7 @@
   "pli-tv-kd1:5.8.1": "Twice the Buddha repeated to Sahampati what he had thought, and on both occasions Sahampati repeated his request. ",
   "pli-tv-kd1:5.10.1": "The Buddha understood the request of that supreme being. Then, with the eye of a Buddha, he surveyed the world out of compassion for sentient beings. ",
   "pli-tv-kd1:5.11.1": "He saw beings with little dust in their eyes and with much dust in their eyes, with sharp faculties and with dull faculties, with good qualities and with bad qualities, easy to teach and difficult to teach. He even saw some who regarded the next world as dangerous and to be avoided, while others did not. ",
-  "pli-tv-kd1:5.11.2": "It was just like blue, red, and white lotuses, sprouted and grown in a lotus pond: some remain submerged in the water without rising out of it, others reach the surface of the water, while others still rise out of the water without being touched by it. ",
+  "pli-tv-kd1:5.11.2": "It was just like red and white lotuses and blue water lilies, sprouted and grown in a lotus pond: some remain submerged in the water without rising out of it, others reach the surface of the water, while others still rise out of the water without being touched by it. ",
   "pli-tv-kd1:5.12.1": "When he had seen this, the Buddha replied to Sahampati in verse: ",
   "pli-tv-kd1:5.12.2": "“The doors to the freedom from death are open! ",
   "pli-tv-kd1:5.12.3": "May those who hear release their faith. ",
