Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj1_translation-en-brahmali.json
@@ -1060,7 +1060,7 @@
   "pli-tv-bu-vb-pj1:9.7.2": "Enemy kings … ",
   "pli-tv-bu-vb-pj1:9.7.3": "enemy bandits … ",
   "pli-tv-bu-vb-pj1:9.7.4": "enemy scoundrels … ",
-  "pli-tv-bu-vb-pj1:9.7.5": "“lotus-scent” enemies. ",
+  "pli-tv-bu-vb-pj1:9.7.5": "“water-lily scent” enemies. ",
   "pli-tv-bu-vb-pj1:9.7.6": "The section in brief is finished. ",
   "pli-tv-bu-vb-pj1:9.7.7.0": "Permutations part 2 ",
   "pli-tv-bu-vb-pj1:9.7.7.1": "If he makes a private part enter a private part, there is an offense entailing expulsion. ",
