Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1266,7 +1266,7 @@
   "pli-tv-kd8:32.1.35": "He cured with a drink of ghee. ",
   "pli-tv-kd8:32.1.36": "And service, valuable cloth, ",
   "pli-tv-kd8:32.1.37": "Full of, he oiled; ",
-  "pli-tv-kd8:32.1.38": "With three handfuls of lotus flowers, ",
+  "pli-tv-kd8:32.1.38": "With three handfuls of water-lily flowers, ",
   "pli-tv-kd8:32.1.39": "Thirty purgings exactly. ",
   "pli-tv-kd8:32.1.40": "He asked for a blameless favor, ",
   "pli-tv-kd8:32.1.41": "And he received the valuable cloths; ",
