Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga6/iti58_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga6/iti58_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti58_translation-it-soma.json
@@ -11,5 +11,5 @@
   "iti58:4.1": "Chi annienta la sete, ",
   "iti58:4.2": "senza più sete per qualsiasi tipo di esistenza [un tipo di esistenza o l'altra (per l’esistenza o la non esistenza),] ",
   "iti58:4.3": "ha davvero raggiunto l’altra sponda in questo mondo ",
-  "iti58:4.4": "e ottenuto la distruzione degli impulsi. "
+  "iti58:4.4": "e ottenuto la distruzione delle compulsioni. "
 }
