Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti61_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti61_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti61_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti61:3.1": "L’occhio fisico, l’occhio divino ",
   "iti61:3.2": "e il supremo occhio della saggezza. ",
   "iti61:3.3": "Questi tre occhi ",
-  "iti61:3.4": "furono descritti dal Buddha, il migliore degli esseri umani. ",
+  "iti61:3.4": "furono descritti dal migliore degli esseri umani. ",
   "iti61:4.1": "Il sorgere dell’occhio fisico ",
   "iti61:4.2": "apre la strada all’occhio divino. ",
   "iti61:4.3": "Da quello sorge la conoscenza ",
