Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti61_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti61_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti61_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti61:3.4": "furono descritti dal migliore degli esseri umani. ",
   "iti61:4.1": "Il sorgere dell’occhio fisico ",
   "iti61:4.2": "apre la strada all’occhio divino. ",
-  "iti61:4.3": "Da quello sorge la conoscenza ",
+  "iti61:4.3": "Quando sorge la conoscenza ",
   "iti61:4.4": "e il supremo occhio della saggezza. ",
   "iti61:4.5": "Una volta raggiunto quell’occhio ",
   "iti61:4.6": "si è liberi da ogni sofferenza. "
