Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn95_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn95_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn95_translation-it-giovannizappa.json
@@ -126,7 +126,7 @@
   "mn95:13.21": "‘Noi sappiamo questo, noi vediamo questo: ",
   "mn95:13.22": "‘Questa è l’unica verità, qualsiasi altra idea è stupida’. ",
   "mn95:13.23": "Immagina una fila di uomini ciechi, ognuno attaccato a quello davanti: il primo non vede, quello in mezzo non vede, e l’ultimo non vede. ",
-  "mn95:13.24": "Allo stesso modo, a me sembra che la dichiarazione dei bramini si rivela essere come una coda di uomini ciechi: il primo non vede, quello in mezzo non vede, e l’ultimo non vede. ",
+  "mn95:13.24": "Allo stesso modo, a me sembra che la dichiarazione dei bramini si rivela essere come una fila di uomini ciechi: il primo non vede, quello in mezzo non vede, e l’ultimo non vede. ",
   "mn95:13.25": "Cosa ne pensi, Bhāradvāja? ",
   "mn95:13.26": "Dato che è così, la fede dei bramini non si rivela non avere basi?” ",
   "mn95:14.1": "“I bramini non onorano questo solo per fede, ma anche per trasmissione orale” ",
