Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an4/an4.50_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an4/an4.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.50_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "an4.50:9.2": "werden von Gier und Hass geplagt; ",
   "an4.50:9.3": "die Männer, von Unwissenheit eingehüllt, ",
   "an4.50:9.4": "genießen Dinge, die erfreulich scheinen. ",
-  "an4.50:10.1": "Sie trinken Alkohol, ",
+  "an4.50:10.1": "Sie trinken Bier und Wein, ",
   "an4.50:10.2": "haben Geschlechtsverkehr, ",
   "an4.50:10.3": "nehmen Zahlungsmittel und Gold: ",
   "an4.50:10.4": "Sie sind unwissend. ",
