Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti63:4.2": "non presume che ci sia un oratore, ",
   "iti63:4.3": "ma toccata l'emancipazione della mente, ",
   "iti63:4.4": "lo stadio della pace più alto, ",
-  "iti63:5.1": "è uno che ha perfezionato l’insegnamento. ",
+  "iti63:5.1": "è uno che ha perfezionato il descrivibile. ",
   "iti63:5.2": "Il saggio placido si delizia nello stato di placidità, ",
   "iti63:5.3": "un praticante fermamente stabilito nel Dhamma comprendendo ",
   "iti63:5.4": "è uno che ha perfetta conoscenza, e non può essere classificato. (è un fuoriclasse) "
