Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -13,5 +13,5 @@
   "iti63:5.1": "è uno che ha perfezionato il descrivibile. ",
   "iti63:5.2": "Il placido saggio si delizia nello stato di placidità, ",
   "iti63:5.3": "un praticante fermamente stabilito nel Dhamma avendo compreso/valutato(fatto una stima) // un praticante fermamente stabilito nel Dhamma che ha soppesato/fatto una valutazione (fatto una stima) ",
-  "iti63:5.4": "è uno che ha perfetta conoscenza, e non può essere classificato / registrato/ trovati/ rilevato. (è un fuoriclasse) "
+  "iti63:5.4": "è uno che ha perfetta conoscenza, e non può essere classificato / registrato/ trovato/ rilevato/. (è un fuoriclasse) "
 }
