Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -12,6 +12,6 @@
   "iti63:4.4": "lo stato di placidità più alto, ",
   "iti63:5.1": "è uno che ha perfezionato il descrivibile. ",
   "iti63:5.2": "Il placido saggio si delizia nello stato di placidità, ",
-  "iti63:5.3": "un praticante fermamente stabilito nel Dhamma avendo annoverato [[[[[[un praticante fermamente stabilito nel Dhamma avendo compreso/valutato(fatto una stima) // un praticante fermamente stabilito nel Dhamma che ha soppesato/fatto/contato una valutazione (fatto una stima)]]]] ",
+  "iti63:5.3": "un praticante fermamente stabilito nel Dhamma che ha annoverato [[[[[[un praticante fermamente stabilito nel Dhamma avendo compreso/valutato(fatto una stima) // un praticante fermamente stabilito nel Dhamma che ha soppesato/fatto/contato una valutazione (fatto una stima)]]]] ",
   "iti63:5.4": "è uno che ha perfetta conoscenza, e non può essere annoverato [[[[classificato/registrato/ trovato/contato rilevato. (è un fuoriclasse) ]]] "
 }
