Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti70:3.4": "Tutto quello che vi dico l’ho conosciuto, visto e compreso di persona. ",
   "iti70:4.1": "",
   "iti70:4.2": "",
-  "iti70:5.1": "Dirigendo la mente verso il falso/sbagliato, ",
+  "iti70:5.1": "Dirigendo la mente in modo sbagliato, ",
   "iti70:5.2": "dicendo parole false/sbagliate ",
   "iti70:5.3": "compiendo azioni false/sbagliate ",
   "iti70:5.4": "con il corpo, qui/in questo mondo, una persona ",
