Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti70:4.1": "",
   "iti70:4.2": "",
   "iti70:5.1": "Dirigendo la mente in modo sbagliato, ",
-  "iti70:5.2": "dicendo parole false/sbagliate ",
+  "iti70:5.2": "proferendo parole in modo sbagliato, ",
   "iti70:5.3": "compiendo azioni false/sbagliate ",
   "iti70:5.4": "con il corpo, qui/in questo mondo, una persona ",
   "iti70:6.1": "ignorante compie cattive azioni ",
